[package]
name = "webhookntfy"
version = "0.1.0"
edition = "2021"
authors = ["martabal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
dotenv = "0.15.0"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_yaml = "0.9"
tokio = { version = "1.27.0", features = ["full"] }
